--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ rvm:
 install: 
   - bundle install
     # Assure order of files for qed
+  - mkdir tmp || true
 script: 
   - bundle exec rspec spec
   - ./acceptance_test
